--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.9",
     "expo": "^53.0.9",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "expo-haptics": "~14.1.4",
+    "expo-symbols": "~0.4.4",
+    "expo-modules-core": "~2.3.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +36,6 @@
     "tailwindcss": "^3.4.0",
     "typescript": "~5.8.3"
   },
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "private": true
 }
