--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.9",
+    "axios": "^1.9.0",
     "expo": "^53.0.9",
     "expo-haptics": "~14.1.4",
     "expo-modules-core": "~2.3.13",
