--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@react-navigation/native": "^7.1.9",
     "axios": "^1.9.0",
     "date-fns": "^2.30.0",
-    "expo": "^53.0.9",
+    "expo": "53.0.13",
     "expo-haptics": "~14.1.4",
-    "expo-modules-core": "~2.3.13",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
+    "expo-modules-core": "~2.4.0",
+    "expo-router": "~5.1.1",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
+    "expo-symbols": "~0.4.5",
     "nativewind": "latest",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0"
   },
