--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
+    "jwt-decode": "^4.0.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.4",
